008 ==> 305224 - Configure Shortcuts does not provide the option of config.
009 ==> 305961 - Changing EXIF auto-rotation method.
010 ==> 306193 - Desktop-file-validate fails on kipiplugins.desktop.
011 ==> 306641 - Export module is not available for toolbar and rightclick context.
012 ==> 163164 - Allow more conservative memory management.
013 ==> 148649 - digiKam needs a better image scaler.
014 ==> 261698 - Zoom to 100% does not map 1 picture pixel to 1 screen pixel.
015 ==> 303690 - Hierarchical tags inconsistencies.
016 ==> 306879 - Filter sections folding is weird
017 ==> 306053 - digiKam creashes on loading collections.
018 ==> 304187 - XMP sidecar files do not write Unicode characters in the Dublin Core section.
019 ==> 304490 - "assigning image tags" dialog stuck when using keyboard shortcuts for tagging.
020 ==> 307257 - Import not working at all (crash due to uninitialized components).
021 ==> 306371 - Rename with sequence number.
022 ==> 307314 - digiKam uses AHD when set to AMaZE, AFD etc.
023 ==> 260612 - After "save changes" the status-bar shows: filename_v1.jpg (-1 of 23).
024 ==> 296786 - Zoom to 100% pans to the top-left corner.
025 ==> 307277 - digiKam corrupts MPO files while attempting to rotate it.
026 ==> 304077 - XMP metadata interoperability problem and inconsistency.
027 ==> 207005 - Raw Import Tool does not reflect the predefined Workspace when custom.
028 ==> 305823 - digiKam writes to Samsung RAW files.
029 ==> 269846 - TIFF loader is broken on big-endian architectures [PATCH].
030 ==> 274555 - digiKam crashes while histogram computation.
031 ==> 301045 - Crash when generating fingerprint in digikam.
032 ==> 306815 - Navigation between images broken after saving changes.
033 ==> 307964 - Not compatible with Canon EOS 5D Mark III.
034 ==> 304609 - Crash of digiKam.
035 ==> 307467 - Missing slide show button in digiKam 3.0.0 beta1.
036 ==> 308065 - Read metadata from photo has no effect on the database.
037 ==> 


